--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row d-flex justify-content-center align-items-center">
-        <div class="contact-email col-12 justify-content-end text-md-right">
+        <div class="contact-email col-12 justify-content-end text-md-right px-5">
             <span><img width="20px" src="../../../assets/correo.png" alt=""><a href="mailto:{{ contactEmail }}">{{ contactEmail }} </a></span>
           </div>
         <div class="company-name col-12 text-center">
