--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,7 +16,7 @@
                 </div>      
             </div>
             <div class="col-2 col-md-1 log-out text-center">
-                <button class="btn-log-out"><img width="48px" src="../../../assets/log_out.png"></button>
+                <button class="btn-log-out" routerLink="/login"><img width="48px" src="../../../assets/log_out.png"></button>
             </div>
         </div>
     </div>
