--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,10 +1,14 @@
 .productos{ 
+    width: 15%;
+    min-width: 150px;
     height: 50px;
-    width: 185px;
     background-color: rgb(199,200,207);
     border-radius: 0 22px 0 0;
     text-align: center;
     align-items: center;
+    letter-spacing: 2px;
+
+    
     p{
         padding-top: 10px;
         color: #ffff;
